--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -154,7 +154,7 @@ const { title, meta_title, description, image, noindex, canonical } =
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content={`${config.site.base_url}/${Astro.url.pathname.replace("/", "")}`}
+      content={`${config.site.base_url}${Astro.url.pathname}`}
     />
 
     <!-- twitter-title -->
