--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -180,6 +180,9 @@ const { title, meta_title, description, image, noindex, canonical } =
         image ? image : config.metadata.meta_image
       }`}
     />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
 
     <!-- twitter-image -->
     <meta
