:memo:MODIFIED: Opening hours

--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -51,13 +51,13 @@ const copyrightText = `© 2023 - ${currentYear} Mercado Regional. Derechos Reser
           <hr class="border-border dark:border-darkmode-border w-full" />
         </div>
         <div class="text-text dark:text-darkmode-text mb-2 lg:mb-4">
-          <p class="mb-1"><strong>Lunes:</strong> 7:00 - 21:00 hrs</p>
-          <p class="mb-1"><strong>Martes:</strong> 7:00 - 21:00 hrs</p>
-          <p class="mb-1"><strong>Miércoles:</strong> 7:00 - 21:00 hrs</p>
-          <p class="mb-1"><strong>Jueves:</strong> 7:00 - 21:00 hrs</p>
-          <p class="mb-1"><strong>Viernes:</strong> 7:00 - 21:00 hrs</p>
-          <p class="mb-1"><strong>Sábado:</strong> 7:00 - 21:00 hrs</p>
-          <p class="mb-1"><strong>Domingo:</strong> 7:00 - 21:00 hrs</p>
+          <p class="mb-1"><strong>Lunes:</strong> 8:00 hrs - 21:00 hrs</p>
+          <p class="mb-1"><strong>Martes:</strong> 8:00 hrs - 21:00 hrs</p>
+          <p class="mb-1"><strong>Miércoles:</strong> 8:00 hrs - 21:00 hrs</p>
+          <p class="mb-1"><strong>Jueves:</strong> 8:00 hrs - 21:00 hrs</p>
+          <p class="mb-1"><strong>Viernes:</strong> 8:00 hrs - 21:00 hrs</p>
+          <p class="mb-1"><strong>Sábado:</strong> 8:00 hrs - 21:00 hrs</p>
+          <p class="mb-1"><strong>Domingo:</strong> 8:00 hrs - 21:00 hrs</p>
         </div>
       </div>
     </div>
@@ -143,6 +143,7 @@ const copyrightText = `© 2023 - ${currentYear} Mercado Regional. Derechos Reser
     <div
       class="container text-center text-text-light dark:text-darkmode-text-light"
     >
-    <p>{copyrightText}</p>
+      <p>{copyrightText}</p>
+    </div>
   </div>
 </footer>
