--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -28,16 +28,16 @@ const { title, description, meta_title, image } = contacto.data;
             <h2>Nuestra Ubicación</h2>
             <p>Puede visitarnos en nuestra tienda física ubicada en:</p>
             <p>
-              <strong>MERCADO REGIONAL</strong><br />
-              KM 91 +100 CARRETERA A CHIHUAHUA<br />
-              ENTRONQUE A TACUBA, GASOLINERA PHILLIPH 66<br />
-              CIENEGA DE CASTILLO<br />
+              <strong>Mercado Regional</strong><br />
+              Km 91 +100 Carretera a Chihuahua<br />
+              Entronque a Tacuba, Gasolinera Philliph 66<br />
+              Cienega de Castillo<br />
               31605 Cuauhtémoc, Chihuahua<br />
               México
             </p>
             <p>
               <strong>Horario de atención:</strong><br />
-              Todos los días: 7:00 a.m. - 9:00 p.m.
+              Todos los días: 8:00 a.m. - 9:00 p.m.
             </p>
             <h2>Información de Contacto</h2>
             <p>
