:zap:ADDED: Data form

--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -61,6 +61,7 @@ const { title, description, meta_title, image } = contacto.data;
         </div>
         <div class="md:col-6">
           <form action={contact_form_action} method="POST" data-netlify="true">
+            <input type="hidden" name="form-name" value="contacto" />
             <div class="mb-6">
               <label for="name" class="form-label">
                 Nombre Completo <span class="text-red-500">*</span>
