--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -20,7 +20,7 @@
   @apply inline-block;
 }
 .social-icons li a {
-  @apply flex h-9 w-9 items-center justify-center rounded-sm bg-primary text-center leading-9 text-white dark:bg-darkmode-primary dark:text-text-dark;
+  @apply flex h-9 w-9 items-center justify-center rounded-sm bg-primary text-center leading-9 text-white dark:bg-darkmode-primary dark:text-text-dark hover:bg-text-dark hover:border-text-dark dark:hover:text-darkmode-primary transition-colors;
 }
 .social-icons li a svg {
   @apply h-5 w-5;
