:zap:IMPROVED: Footer

--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -14,12 +14,12 @@ const copyrightText = `© 2023 - ${currentYear} Mercado Regional. Derechos Reser
     <!-- First row: 3 columns -->
     <div class="row py-6 lg:py-10">
       <!-- Column 1: Logo -->
-      <div class="lg:col-3">
+      <div class="lg:col-3 pb-6">
         <Logo />
       </div>
 
       <!-- Column 2: Title + Vertical Pages -->
-      <div class="lg:col-6">
+      <div class="lg:col-6 pb-6">
         <h3 class="text-h5 mb-2 text-text-dark dark:text-darkmode-text-dark">
           Enlaces
         </h3>
@@ -40,7 +40,7 @@ const copyrightText = `© 2023 - ${currentYear} Mercado Regional. Derechos Reser
       </div>
 
       <!-- Column 3: Schedule -->
-      <div class="lg:col-3">
+      <div class="lg:col-3 pb-6">
         <h3 class="text-h5 mb-2 text-text-dark dark:text-darkmode-text-dark">
           Horario de Atención
         </h3>
@@ -59,7 +59,7 @@ const copyrightText = `© 2023 - ${currentYear} Mercado Regional. Derechos Reser
     <!-- Second row: 3 columns -->
     <div class="row pb-6 lg:pb-10">
       <!-- Column 1: Social Media -->
-      <div class="lg:col-4">
+      <div class="lg:col-4 pb-6">
         <h3 class="text-h5 mb-2 text-text-dark dark:text-darkmode-text-dark">
           Síguenos en Redes Sociales
         </h3>
@@ -72,11 +72,11 @@ const copyrightText = `© 2023 - ${currentYear} Mercado Regional. Derechos Reser
       </div>
 
       <!-- Column 2: Developed by Aniwa -->
-      <div class="lg:col-4">
+      <div class="lg:col-4 pb-6">
         <h3 class="text-h5 mb-2 text-text-dark dark:text-darkmode-text-dark">
           Desarrollado por
         </h3>
-        <div class="flex justify-center items-center mb-2 lg:mb-4">
+        <div class="flex justify-center items-center mb-2 lg:mb-4 mt-4">
           <a
             href="https://beaniwa.com"
             target="_blank"
@@ -113,12 +113,14 @@ const copyrightText = `© 2023 - ${currentYear} Mercado Regional. Derechos Reser
       </div>
 
       <!-- Column 3: Additional Information -->
-      <div class="lg:col-4">
-        <h3 class="text-h5 mb-2 text-text-dark dark:text-darkmode-text-dark">
-          ¿Eres productor y quieres que tu logo aparezca aqui?
+      <div class="lg:col-4 pb-6">
+        <h3
+          class="text-h5 mb-2 text-text-dark dark:text-darkmode-text-dark mt-2"
+        >
+          ¿Eres productor y quieres que tu logo aparezca?
         </h3>
         <p class="text-text dark:text-darkmode-text mb-2 lg:mb-4">
-          Más información
+          Contáctanos: contacto@mercadolibre.com.mx
         </p>
       </div>
     </div>
