--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -74,7 +74,7 @@ const copyrightText = `© 2023 - ${currentYear} Mercado Regional. Derechos Reser
       <!-- Column 2: Developed by Aniwa -->
       <div class="lg:col-4 pb-6">
         <h3 class="text-h5 mb-2 text-text-dark dark:text-darkmode-text-dark">
-          Desarrollado por
+          Desarrollado por:
         </h3>
         <div class="flex justify-center items-center mb-2 lg:mb-4 mt-4">
           <a
@@ -120,7 +120,7 @@ const copyrightText = `© 2023 - ${currentYear} Mercado Regional. Derechos Reser
           ¿Eres productor y quieres que tu logo aparezca?
         </h3>
         <p class="text-text dark:text-darkmode-text mb-2 lg:mb-4">
-          Contáctanos: contacto@mercadolibre.com.mx
+          Escríbenos a contacto@mercadoregional.com.mx
         </p>
       </div>
     </div>
