:zap:IMPROVED: Footer

--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -119,8 +119,13 @@ const copyrightText = `© 2023 - ${currentYear} Mercado Regional. Derechos Reser
         >
           ¿Eres productor y quieres que tu logo aparezca?
         </h3>
-        <p class="text-text dark:text-darkmode-text mb-2 lg:mb-4">
-          Escríbenos a <a
+        <h4
+          class="text-center text-h6 mb-2 text-text-dark dark:text-darkmode-text-dark"
+        >
+          Escríbenos a
+        </h4>
+        <p class="text-center text-text dark:text-darkmode-text mb-2 lg:mb-4">
+          <a
             href="mailto:contacto@mercadoregional.com.mx?subject=Logo&body=Por%20favor%20env%C3%ADa%20los%20archivos%20en%20formato%20SVG%20o%20PNG%2C%20blanco%20y%20negro%20%C3%BAnicamente.%20Especifica%20resoluci%C3%B3n%20y%20cualquier%20requerimiento%20t%C3%A9cnico%20adicional.%20%F0%9F%93%81"
             >contacto@mercadoregional.com.mx</a
           >
